--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,13 @@
         "Akeneo",
         "Supplier"
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/igcopensources/akeneo-supplier-bundle.git",
+            "branch": "master"
+        }
+    ]
     "minimum-stability": "stable",
     "require": {
         "akeneo/pim-enterprise-dev": "2.0.*",
@@ -22,11 +29,6 @@
     "autoload": {
         "psr-4": {
             "Cgi\\SupplierBundle\\": ""
-        }
-    },
-    "extra" : {
-        "branch-alias" : {
-            "master" : "v1.0.0"
         }
     }
 }
