--- a/Resources/config/managers.yml
+++ b/Resources/config/managers.yml
@@ -17,3 +17,5 @@ services:
         class: "%supplier.manager.attribute.class%"
         arguments:
             - "@pim_catalog.repository.attribute"
+            - "@pim_reference_data.registry"
+            - "%supplier.class.name%"
